@@ -1,0 +1,20 @@
+Developer notes for future stuff
+
+
+    '''Steps to encrypt/decrypt using cryptography package
+
+    from cryptography.hazmat.primitives import serialization
+    from cryptography.hazmat.backends import default_backend
+    from cryptography.hazmat.primitives.asymmetric import padding
+    from cryptography.hazmat.primitives import hashes
+
+
+    with open("/Users/andrew.hamlin/.ssh/id_rsa.pub", "rb") as key_file:
+        pub_key = serialization.load_ssh_public_key(key_file.read(), default_backend())
+    with open("/Users/andrew.hamlin/.ssh/id_rsa", "rb") as key_file:   
+        pri_key = serialization.load_pem_private_key(key_file.read(), password=b"PASSWORDHERE", backend=default_backend())
+
+    cipher = pub_key.encrypt(b"hello", padding.OAEP(mgf=padding.MGF1(algorithm=hashes.SHA1()), algorithm=hashes.SHA1(), label=None))
+    pri_key.decrypt(cipher, padding.OAEP(mgf=padding.MGF1(algorithm=hashes.SHA1()), algorithm=hashes.SHA1(), label=None))
+    '''
+
